--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
-"homepage": "http://sinthaesia.github.io/sinthgit"
 {
+  "homepage": "http://sinthaesia.github.io/sinthgit",
   "name": "sinthaesia",
   "version": "0.1.0",
   "private": true,
