--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "homepage": "http://sinthaesia.github.io/sinthgit",
   "name": "sinthaesia",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.7.0",
+    "@material-ui/core": "^4.7.1",
     "@material-ui/icons": "^4.5.1",
     "gh-pages": "^2.1.1",
     "gsap": "^3.0.1",
@@ -14,16 +13,14 @@
     "react-dom": "^16.12.0",
     "react-mdl": "^1.11.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "3.3.0",
     "react-transition-group": "^4.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
